crates/templates/tests/snapshots/function__impl-22.snap
---
source: crates/templates/tests/function.rs
description: Function global environment variables
expression: output
---
# Function with a local option with choices
foo() {
  # Parse environment variables
  
  if [[ -z "${BAR:-}" ]]; then
    printf "\e[31m%s\e[33m%s\e[31m\e[0m\n\n" "Missing required environment variable: " "BAR" >&2
    foo_usage >&2
    exit 1
  fi
  if [[ -n "$rargs_baz" ]]; then
    rargs_baz="${BAZ:-}"
  fi

  # Parse command arguments
  parse_foo_arguments "$@"

  echo "No implementation body found for function foo"
}

