crates/templates/tests/snapshots/function__impl-3.snap
---
source: crates/templates/tests/function.rs
description: Function with no-first-option-help rule
expression: output
---
# Simple function
foo() {
  # Parse command arguments
  parse_foo_arguments "$@"

  # Rule `no-first-option-help`: Render the global or command usage if the `-h|--help` option is
  #                              is provided anywhere on the command, not just as the first option.
  #                              Handling individual functions case by case.
  if [[ -n "$rargs_help" ]]; then
    foo_usage
    exit 0
  fi
  echo "No implementation body found for function foo"
}

