crates/templates/tests/snapshots/function__impl-6.snap
---
source: crates/templates/tests/function.rs
description: Function with local required option
expression: output
---
# Function with a local required option
foo() {

  
  if [[ -z "${args['require']}" ]]; then
    printf "\e[31m%s\e[33m%s\e[31m\e[0m\n\n" "Missing required option: " "require" >&2
    foo_usage >&2
    exit 1
  fi
}

