crates/templates/tests/snapshots/function__impl-9.snap
---
source: crates/templates/tests/function.rs
description: Function with global default option
expression: output
---
# Function with global default option
foo() {
  # Parse command arguments
  parse_foo_arguments "${input[@]}"

  
  if [[ -z "${args['default']}" ]]; then
    args['default']="foo"
  fi
  echo "No implementation body found for function foo"
}

